<resources>
    <string name="app_name">TasarimCalismasiOdevi</string>
    <string name="uygulama_giris_cumlesi">Welcome Furkan Yıldırım</string>
    <string name="secenek_1">My Accounts</string>
    <string name="secenek_2">My Credit Cards</string>
    <string name="sube_yazi">CUMHURİYET/ERZURUM ŞUBESİ</string>
    <string name="hesap_turu">Checking - TL</string>
    <string name="hesap_no">0000-000000000000</string>
    <string name="iban_no">TR00 0000 0000 0000 0000 0000 00</string>
    <string name="bakiye_yazi">Balance</string>
    <string name="bakiye_bilgi">0,00 TL</string>
    <string name="tum_hesaplarim_buton_yazi">All My Acoounts</string>
    <string name="hesap_hareketleri_buton_yazi">Account Transactions</string>








</resources>